--- a/br-backend/Pipfile
+++ b/br-backend/Pipfile
@@ -12,6 +12,7 @@ django-filter = "*"
 djoser = "*"
 djangorestframework-simplejwt = "*"
 django-cors-headers = "*"
+pillow = "*"
 
 [dev-packages]
 
