--- a/br-frontend/package.json
+++ b/br-frontend/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
